:bug: set width and wrap resource title on review page

--- a/frontend/styles/components/review.scss
+++ b/frontend/styles/components/review.scss
@@ -9,6 +9,7 @@
 
 h2.review-title {
   margin: 20px 0;
+  width: 400px;
   color: $primary-text;
   font-size: 1.2rem;
 }
